Fix animation on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body, html, #root, .App {
 }
 
 .main .sweet-loading {
+  display: block;
   position: absolute;
   top: -10px;
   left: calc(50% - 135px);
@@ -75,6 +76,9 @@ body, html, #root, .App {
 
 .corona-virus-logo {
   width: 250px;
+  display: block;
+  margin-left: calc(50% - 125px);
+  
   -webkit-animation-name: spin;
   -webkit-animation-duration: 10000ms;
   -webkit-animation-iteration-count: infinite;
